@@ -1,0 +1,167 @@
+END-USER LICENSE AGREEMENT
+FOR F-PROT ANTIVIRUS
+
+This is a binding, legal agreement between the end user (the
+"licensee") and Frisk Software International ("FSI") for the F-Prot
+Antivirus software product, which includes the software program,
+material and online or electronic documentation. By installing,
+copying, downloading, accessing or otherwise using the F-Prot
+Antivirus software you agree to be bound by the terms of this
+Agreement. If you do not agree to the terms of this agreement you may
+not download, install or use the F-Prot Antivirus software product,
+but return it to your place of purchase.
+
+Software Product License
+
+1. Scope of license: The license granted hereunder applies to one of
+the following versions of the F-Prot Antivirus software product as
+provided by FSI to the licensee:
+
+1.1. F-Prot Antivirus for Windows: License applies to any computer(s)
+as indicated by the invoice.
+
+1.2. F-Prot Antivirus for Exchange: License applies only to mail
+servers, mail relays and mail gateways, i.e., computers that provide
+mail services to a network, for either in-coming or out-going e-mail.
+
+1.3. F-Prot Antivirus for Linux/BSD Mail Servers version: License
+applies only to mail servers, mail relays and mail gateways, i.e.,
+computers that provide mail services to a network, for either
+in-coming or out-going e-mail.
+
+1.4. F-Prot Antivirus for Linux/BSD File Servers version: License
+applies only to file, print and application servers, i.e., computers
+that provide network services other than mail services.
+
+1.5. F-Prot Antivirus for Linux/BSD Workstations version: License
+applies only to one single workstation and any files stored
+locally. If the workstation provides network services then a File
+Server or Mail Server license is required.
+
+1.6. F-Prot Antivirus for AIX: License applies to servers, i.e.,
+computers that provide mail services to a network, for either
+in-coming or out-going e-mail, or servers that provide network
+services other than mail services.
+
+1.7. F-Prot Antivirus for Solaris Mail Servers version: License
+applies only to mail servers, mail relays and mail gateways, i.e.,
+computers that provide mail services to a network, for either
+in-coming or out-going e-mail.
+
+1.8. F-Prot Antivirus for Solaris File Servers version: License
+applies only to file, print and application servers, i.e., computers
+that provide network services other than mail services.
+
+1.9. F-Prot Antivirus for Solaris Workstations version: License
+applies only to one single workstation and any files stored
+locally. If the workstation provides network services then a File
+Server or Mail Server license is required.
+
+1.10. F-Prot Antivirus for DOS: License applies to any computer(s) as
+indicated by the invoice.
+
+2. Grant of License:
+
+2.1. Software Product: FSI grants the licensee a non-exclusive,
+non-transferable license to use the F-Prot Antivirus software product
+on any computer/computers owned by the licensee, effective as stated
+in the invoice. The licensee may make one copy solely for backup and
+archival purposes. Except as otherwise expressly provided in this
+agreement the licensee may not otherwise make copies of the F-Prot
+Antivirus software product or the printed material accompanying
+therewith.
+
+2.2. Installation:
+
+2.2.1. You may install the F-Prot Antivirus for Windows software
+product, the corporate user version, for the number of computers
+purchased from FSI. Users who have bought F-Prot Antivirus for Windows
+software product, the home user version, may install it on all
+computers in their household that are used for personal purposes.
+
+2.2.2. You may install the F-Prot Antivirus for Exchange software
+product for the number of mailboxes covered by your FSI license.
+
+2.2.3. You may install the F-Prot Antivirus for Linux/BSD Mail Servers
+software product for the number of users covered by your FSI license.
+
+2.2.4. You may install the F-Prot Antivirus for Linux/BSD File Servers
+version software product for the number of servers covered by your FSI
+license.
+
+2.2.5. You may install the F-Prot Antivirus for Linux/BSD Workstations
+software product for the number of workstations covered by your FSI
+license.
+
+2.2.6. You may install the F-Prot Antivirus for AIX software product
+for the number of users covered by your FSI license.
+
+2.2.7. You may install the F-Prot Antivirus for Solaris software
+product for the number of users covered by your FSI license.
+
+2.2.8. You may install the F-Prot Antivirus for DOS software product
+for the number of computers covered by your FSI license.
+
+3. Description of other Rights and Limitations
+
+3.1. Not for resale: The F-Prot Antivirus is limited for your personal
+or professional use only, and not for resale, or otherwise to transfer
+for value the software product.
+
+3.2. Limitation on Reverse Engineering, Decompilation and Disassembly:
+The licensee may not reverse engineer, decompile, or disassemble the
+software product, except and only to the extent such activity is
+expressly permitted by applicable law.
+
+3.3. Rental: Licensee may not rent, lease or lend the software product.
+
+3.4. Services and Technical support: FSI may provide you with support
+services related to the software product as deemed necessary.
+
+3.5. Termination: Without prejudice to any other rights, FSI may
+terminate this Agreement if you fail to comply with the terms and
+conditions of the Agreement. In such event, you must destroy and
+remove all copies of the software product and all of its component
+parts.
+
+3.6. Updates: You may discover a new virus, unknown to FSI, and send
+it to FSI, who will provide the licensee with an updated version of
+the F-Prot Antivirus software program as soon as possible.
+
+4. Copyright: All title and intellectual property right in and to the
+F-Prot Antivirus, the accompanying printed materials and any copies
+obtained from the Internet are owned by FSI. All title and
+intellectual property right in and to the content, which may be
+accessed through use of the F-Prot Antivirus, is the property of the
+respective content owner and may be protected by applicable copyright
+or other intellectual property laws. This Agreement grants no right to
+use such content. All rights not expressly granted are reserved by
+FSI.
+
+5. Limited Warranty: FSI warrants that the F-Prot Antivirus will
+perform substantially in accordance with any specifications provided
+for the period of time established by applicable law from the date of
+purchase. The Licensee understands and agrees that the software
+product is provided "as is", with all faults that may accompany
+software products. FSI warrants that any diskettes provided are free
+of any physical defects.
+
+6. Warranty Exclusions: FSI makes no other express or implied
+warranties, regarding the performance of the software included in the
+F-Prot Antivirus software program, but will use its best efforts to
+promptly correct any errors in the said software that are reported by
+Licensee. FSI may attempt to correct errors through the means it
+determines to be most appropriate. Errors caused by hardware
+malfunctions or failure, or by loss of data or disruption of services
+over the Internet due to third party, are expressly excluded.
+
+7. Limitation of Liability: FSI shall not be liable for any indirect,
+consequential, incidental, or punitive damages or attorney fees for
+any cause of action, in tort or contract, regardless of whether FSI
+was aware of the possibility of such damages. Licensee's exclusive
+remedy shall be the amounts licensee paid FSI.
+
+8. Disputes: Any disputes arising out of the inception, application or
+interpretation of this agreement shall be settled in accordance with
+the laws of Iceland and the exclusive jurisdiction of the applicable
+court in Iceland.
