@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4327 2004/01/02 18:13:57 reinoud Exp $
+$NetBSD: CHANGES,v 1.4328 2004/01/02 18:45:44 ben Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -27,3 +27,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated sun-jdk13 to 1.0.10 [jschauma 2004-01-02]
 	Updated sun-jre13 to 1.0.10 [jschauma 2004-01-02]
 	Updated qcad to 1.5.4nb3 [reinoud 2004-01-02]
+	Added fp-netbsd-ws-4.3.1 [ben 2004-01-02]
